multiple image added for product
